[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI/OptionsMenu.gd" type="Script" id=2]

[node name="OptionsMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 40.0
margin_right = -60.0
margin_bottom = -40.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1800.0
margin_bottom = 1000.0
color = Color( 0.337255, 0.188235, 0.576471, 1 )

[node name="MainVBox" type="HBoxContainer" parent="."]
margin_right = 1800.0
margin_bottom = 1000.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainVBox"]
margin_right = 898.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainVBox/VBoxContainer"]
margin_right = 898.0
margin_bottom = 976.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MainVBox/VBoxContainer/VBoxContainer"]
margin_right = 898.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="MainVBox/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 105.0
margin_bottom = 15.0
text = "Master Volume: "

[node name="volume_master_slider" type="HSlider" parent="MainVBox/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 109.0
margin_right = 898.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="HBoxContainer2" type="HBoxContainer" parent="MainVBox/VBoxContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 898.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="MainVBox/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 142.0
margin_bottom = 15.0
text = "Sound Effects Volume:"

[node name="volume_sfx_slider" type="HSlider" parent="MainVBox/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 146.0
margin_right = 898.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="HBoxContainer3" type="HBoxContainer" parent="MainVBox/VBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 898.0
margin_bottom = 148.0

[node name="Label" type="Label" parent="MainVBox/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 95.0
margin_bottom = 15.0
text = "Music Volume:"

[node name="volume_music_slider" type="HSlider" parent="MainVBox/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 99.0
margin_right = 898.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="HBoxContainer4" type="HBoxContainer" parent="MainVBox/VBoxContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 898.0
margin_bottom = 238.0

[node name="uv_label" type="Label" parent="MainVBox/VBoxContainer/VBoxContainer/HBoxContainer4"]
margin_top = 13.0
margin_right = 93.0
margin_bottom = 27.0
text = "Ultraviolence: "

[node name="uv_check" type="CheckButton" parent="MainVBox/VBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 97.0
margin_right = 173.0
margin_bottom = 40.0

[node name="MainMenu" type="Button" parent="MainVBox/VBoxContainer"]
margin_top = 980.0
margin_right = 898.0
margin_bottom = 1000.0
text = "Main Menu"

[node name="BindingScrollContainer" type="ScrollContainer" parent="MainVBox"]
margin_left = 902.0
margin_right = 1800.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Background" type="ColorRect" parent="MainVBox/BindingScrollContainer"]
margin_right = 898.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.231373, 0.0705882, 0.278431, 1 )

[node name="BindingVBox" type="VBoxContainer" parent="MainVBox/BindingScrollContainer/Background"]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="value_changed" from="MainVBox/VBoxContainer/VBoxContainer/HBoxContainer/volume_master_slider" to="." method="_on_volume_master_slider_value_changed"]
[connection signal="value_changed" from="MainVBox/VBoxContainer/VBoxContainer/HBoxContainer2/volume_sfx_slider" to="." method="_on_volume_sfx_slider_value_changed"]
[connection signal="value_changed" from="MainVBox/VBoxContainer/VBoxContainer/HBoxContainer3/volume_music_slider" to="." method="_on_volume_music_slider_value_changed"]
[connection signal="toggled" from="MainVBox/VBoxContainer/VBoxContainer/HBoxContainer4/uv_check" to="." method="_on_uv_check_toggled"]
[connection signal="button_up" from="MainVBox/VBoxContainer/MainMenu" to="." method="_on_MainMenu_button_up"]
